--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,6 @@
                 </div>
         </form>
         <br/>
-        <center><a href = "create/index.html" id = "host">Clica aquí per hostejar una partida</a></center>
+        <center><a href = "host/index.html" id = "host">Clica aquí per hostejar una partida</a></center>
     </body>
 </html>
